--- a/src/App.css
+++ b/src/App.css
@@ -251,6 +251,7 @@ body {
   width: 800px;
   height: auto;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 12px;
 }
 
 .gatitos{
